@@ -16,18 +16,52 @@
 
 package com.netflix.governator.lifecycle;
 
+import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableSet;
 import com.google.inject.Inject;
+import com.netflix.governator.lifecycle.warmup.WarmUpException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import java.util.Collection;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 
 public class LifecycleManagerArguments
 {
+    private static final Logger             log = LoggerFactory.getLogger(LifecycleManagerArguments.class);
+
+    @VisibleForTesting
+    public static final long                DEFAULT_WARM_UP_PADDING_MS = TimeUnit.SECONDS.toMillis(3);
+
     @Inject(optional = true)
     private LifecycleConfigurationProviders configurationProvider = new LifecycleConfigurationProviders();
 
     @Inject(optional = true)
     private Set<LifecycleListener>          lifecycleListeners = ImmutableSet.of();
+
+    @Inject(optional = true)
+    private PostStartArguments              postStartArguments = new PostStartArguments()
+    {
+        @Override
+        public WarmUpErrorHandler getWarmUpErrorHandler()
+        {
+            return new WarmUpErrorHandler()
+            {
+                @Override
+                public void warmUpError(WarmUpException exception)
+                {
+                    log.error("Fatal error in warm up after LifecycleManager.start() has been called.", exception);
+                    System.exit(-1);
+                }
+            };
+        }
+
+        @Override
+        public long getWarmUpPaddingMs()
+        {
+            return DEFAULT_WARM_UP_PADDING_MS;
+        }
+    };
 
     @Inject
     public LifecycleManagerArguments()
@@ -52,5 +86,15 @@ public class LifecycleManagerArguments
     public void setLifecycleListeners(Collection<LifecycleListener> lifecycleListeners)
     {
         this.lifecycleListeners = ImmutableSet.copyOf(lifecycleListeners);
+    }
+
+    public PostStartArguments getPostStartArguments()
+    {
+        return postStartArguments;
+    }
+
+    public void setPostStartArguments(PostStartArguments postStartArguments)
+    {
+        this.postStartArguments = postStartArguments;
     }
 }
